--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,9 +4,9 @@ RSpec/MultipleExpectations:
   Max: 4
 RSpec/ContextWording:
   Enabled: false
-RSpec/FilePath:
-  SpecSuffixOnly: true
 RSpec/InstanceVariable:
+  Enabled: false
+RSpec/LeakyConstantDeclaration:
   Enabled: false
 
 AllCops:
@@ -15,26 +15,38 @@ AllCops:
     - final.gemspec
     - Gemfile
     - Rakefile
+
 Lint/AssignmentInCondition:
+  Enabled: false
+Lint/ConstantDefinitionInBlock:
   Enabled: false
 Lint/EmptyBlock:
   Exclude:
     - spec/*.rb
-Style/MethodCallWithoutArgsParentheses:
+Lint/MissingSuper:
   Enabled: false
-Style/NumericPredicate:
-  Enabled: false
+
+Style/BlockDelimiters:
+  Enabled: false 
 Style/ClassAndModuleChildren:
   Enabled: false
 Style/ConditionalAssignment:
+  Enabled: false
+Style/GuardClause:
   Enabled: false
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
 Style/IfUnlessModifier:
   Enabled: false
+Style/MethodCallWithoutArgsParentheses:
+  Enabled: false
+Style/NumericPredicate:
+  Enabled: false
 Style/RedundantBegin:
   Enabled: false   
 Style/SafeNavigation:
+  Enabled: false
+Style/Semicolon:
   Enabled: false
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
@@ -45,7 +57,7 @@ Layout/SpaceBeforeBlockBraces:
 Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
-  IgnoredMethods: ['describe', 'context']
+  AllowedMethods: ['describe', 'context']
 Metrics/ClassLength:
   Enabled: false
 Metrics/MethodLength:
